--- a/Sparc2/Sparc2/Catalog/ProductPage.razor.scss
+++ b/Sparc2/Sparc2/Catalog/ProductPage.razor.scss
@@ -172,7 +172,7 @@
             font-family: 'Fjalla One';
             font-weight: 600;
             margin: 36px 0 24px;
-            color: var(--Color-Purple-900, #1A0C32);
+            color: var(--purple-900);
         }
 
         h1 {
@@ -193,7 +193,7 @@
             font-style: normal;
             font-weight: 400;
             line-height: 140%; /* 22.4px */
-            color: var(--Color-Purple-900, #1A0C32);
+            color: var(--purple-900);
         }
     }
 
@@ -216,140 +216,31 @@
         }
     }
 
+    
+
     @media only screen and (max-width: 766px) {
         grid-column: 1 / span 4;
-
-        &.left-only {
-            height: calc(100vh - 64px);
-
-            .page-container {
-                display: flex;
-                flex-direction: column-reverse;
-                justify-content: start;
-                align-items: center;
-                gap: 32px;
-            }
-
-            .left {
-                height: 100%;
-                position: static;
-            }
-
-            .right {
-                height: fit-content;
-
-                ::deep .product-info {
-                    height: fit-content !important;
-
-                    section, footer {
-                        display: none;
-                    }
-                }
-            }
-        }
+        overflow-y: auto;
 
         .page-container {
-            height: 100%;
-            //flex-direction: column-reverse;
+            flex-direction: column-reverse;
+            padding-bottom: 150px;
 
             > * {
                 width: 100%;
+                box-sizing: border-box;
+                height: auto;
             }
         }
 
-        .left {
-            display: block;
+        .left-sidebar {
+            max-width: 90vw;
+        }
+
+        .right-container {
             width: 100%;
-            height: calc(100vh - 80px);
-            padding: 0;
-            position: fixed;
-            top: 64px;
-            overflow-y: hidden;
-
-            &-container {
-                width: calc(100% - 32px);
-                height: 100%;
-                padding: 16px;
-                padding-top: 0;
-                display: flex;
-                flex-direction: column;
-                justify-content: start;
-                gap: 16px;
-                overflow-y: auto;
-
-                .span-2 {
-                    flex-direction: column;
-
-                    ::deep .product-img {
-                        width: 100%;
-                    }
-                }
-            }
-
-            ::deep .spacer {
-                display: block;
-                width: 100%;
-                padding-bottom: 363px;
-            }
-        }
-
-        .right {
-            width: calc(100% - 32px);
-            height: 363px;
-            background: var(--yellow-50);
-            transition: height .3s ease-out;
-
-            &-container {
-                width: 100%;
-                height: 100%;
-                position: static;
-            }
-
-            &.fullscreen {
-                height: calc(100vh - 96px);
-                position: fixed;
-                top: 64px;
-                overflow-y: auto;
-                background: var(--yellow-50);
-                transition: height .5s ease-out;
-
-                ::deep .show-less {
-                    width: calc(100% - 32px);
-                    padding: 24px;
-                    padding-top: 40px;
-                    display: flex;
-                    justify-content: center;
-                    position: fixed;
-                    left: 0;
-                    bottom: 0;
-                    background: var(--yellow-50);
-
-                    button {
-                        padding: 6px 10px;
-                        background: none;
-                        border: 1px solid transparent;
-                        border-radius: 16px;
-                        color: var(--gray-900);
-                        text-align: center;
-                        font-family: "Fjalla One";
-                        font-size: 14px;
-                        font-style: normal;
-                        font-weight: 400;
-                        line-height: 110%; /* 15.4px */
-                        animation: fadeIn .5s ease-in-out;
-                        animation-delay: .3s;
-
-                        &:hover {
-                            color: var(--purple-500);
-                        }
-
-                        &:active {
-                            color: var(--purple-700);
-                            border-color: var(--purple-700);
-                        }
-                    }
-                }
-            }
+            height: auto;
+            position: static;
         }
     }
 }
