--- a/Sparc2/Sparc2/Catalog/Purchase/PurchaseLicenseType.razor.scss
+++ b/Sparc2/Sparc2/Catalog/Purchase/PurchaseLicenseType.razor.scss
@@ -2,21 +2,34 @@ h5 {
     font-size: 2.1323rem;
     font-weight: 500;
     line-height: 110%;
+    margin-bottom: 32px;
+    color: var(--purple-700);
 }
 
 .form-container {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 8px;
+    margin-bottom: 46px;
 
     > label {
         display: flex;
         align-items: center;
         padding: 32px;
         gap: 12px;
-        border: 1px solid var(--Color-Purple-500, #6A2FD0);
+        border: 1px solid var(--purple-500, #6A2FD0);
         border-radius: 16px;
         box-shadow: 0px 0px 2px rgba(26, 12, 50, 0.10), 0px 0px 4px rgba(26, 12, 50, 0.20);
+        margin: 0;
+
+        &.disabled {
+            border-color: transparent;
+        }
+
+        input[type=radio] {
+            transform: scale(1.5);
+            accent-color: var(--purple-500);
+        }
 
         span {
             font-size: 2.133rem;
@@ -69,6 +82,7 @@ h5 {
                     flex-direction: column;
                     align-items: flex-start;
                     gap: 8px;
+                    margin: 0;
 
                     span {
                         font-size: 12px;
