--- a/Sparc2/Sparc2/Html.scss
+++ b/Sparc2/Sparc2/Html.scss
@@ -295,6 +295,10 @@ ul {
 
 .mobile-only {
     display: none;
+
+    @media screen and (max-width: 766px) {
+        display: block;
+    }
 }
 
 .description {
@@ -304,7 +308,7 @@ ul {
         font-family: 'Fjalla One';
         font-weight: 600;
         margin: 36px 0 24px;
-        color: var(--Color-Purple-900, #1A0C32);
+        color: var(--purple-900);
     }
 
     h1 {
@@ -335,7 +339,7 @@ ul {
         font-style: normal;
         font-weight: 400;
         line-height: 140%; /* 22.4px */
-        color: var(--Color-Purple-900, #1A0C32);
+        color: var(--purple-900);
         margin-bottom: 24px;
     }
 }
